Generate tokens in the program

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <label id="mc_credentials_name_label" for="mc_credentials_name">Username/e-mail</label>
                 <input id="mc_credentials_name" name="mc_credentials_name" type="text" placeholder="Your username/e-mail" />
-                <a href="#" id="generate_token_button" onclick="generateToken();" style="display: none;">Geneer een nieuwe token</a>
+                <a href="#" id="generate_token_button" onclick="generateToken();" style="display: none;">Generate a new token</a>
                 <div id="mc_credentials_password_block">
                     <label for="mc_credentials_password">Password</label>
                     <input id="mc_credentials_password" name="mc_credentials_password" type="password" placeholder="Your mojang password" />
