Renew EasyMC and MCLeak tokens

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <label id="mc_credentials_name_label" for="mc_credentials_name">Username/e-mail</label>
                 <input id="mc_credentials_name" name="mc_credentials_name" type="text" placeholder="Your username/e-mail" />
                 <a href="#" id="generate_token_button" onclick="generateToken();" style="display: none;">Generate a new token</a>
+                <a href="#" id="renew_token_button" onclick="renewToken();" style="display: none;">Renew the token</a>
                 <div id="mc_credentials_password_block">
                     <label for="mc_credentials_password">Password</label>
                     <input id="mc_credentials_password" name="mc_credentials_password" type="password" placeholder="Your mojang password" />
